boxes: changing styles to prevent buttons from jumping around when showing and hiding
https://stackoverflow.com/a/6393644/2066546
https://stackoverflow.com/a/35270047/2066546

https://support.wingolfsplattform.org/tickets/19823
https://trello.com/c/tfpgbq5Z/1311-fix-knöpfe-im-spaltenkopf-springen

--- a/app/assets/stylesheets/your_platform/new_box.sass
+++ b/app/assets/stylesheets/your_platform/new_box.sass
@@ -29,6 +29,7 @@
     > .box_tools
       z-index: 20
       direction: rtl
+      margin-left: auto
       > *
         direction: ltr
       width: auto
